# cfdi-erp-starter

./: .env.example  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
alembic/versions/: 0204af72d13a_create_invoices_table_autogen_v2.py  a20fa3ff62ae_manual_create_invoices.py  bebdb9b0bf8b_create_invoices_table_autogen_v3.py  eb7319350bee_create_invoices_table_with_idempotency.py
apps/cfdi_engine/: builder.py  signer.py
apps/core/: auth.py
apps/db/: models.py  session.py
apps/erp_api/: main.py
apps/pac_adapter/: base.py  fake.py
apps/sync_worker/: worker.py
docs/: blueprint.md  kilo-architect-prompts.md
postman/: CFDI-ERP-Starter.postman_collection.json
tests/: test_health.py
