[project]
name = "cfdi-erp-starter"
version = "0.1.0"
description = "Mini-ERP + CFDI engine + PAC adapter (starter)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "cryptography>=43.0",
  "lxml>=5.2",
  "redis>=5.0",
  "celery>=5.4",
  "python-jose[cryptography]>=3.3",
  "loguru>=0.7"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10"
]
